<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_plant_library"
        android:icon="@drawable/nav_plant_library"
        android:title="@string/plant_library" />
    <item
        android:id="@+id/nav_my_garden"
        android:icon="@drawable/nav_my_garden"
        android:title="@string/my_garden" />
    <item
        android:id="@+id/nav_camera"
        android:icon="@drawable/nav_camera"
        android:title="@string/camera" />
    <item
        android:id="@+id/nav_reminders"
        android:icon="@drawable/nav_reminders"
        android:title="@string/reminders" />
    <item
        android:id="@+id/nav_growth_tracker"
        android:icon="@drawable/nav_growth_tracker"
        android:title="@string/growth_tracker" />
</menu>
